<resources>
    <string name="app_name">Tic-Tac-Toe</string>

    <string name="welcome_title">Tic-Tac-Toe</string>
    <string name="play_game">Play Game</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="more_options">More Options</string>
    <string name="exit">Exit</string>

    <string name="num_players">Number of Players:</string>
    <string name="computer_difficulty">Computer Difficulty</string>
    <string name="who_plays_first">Who Plays First?</string>
    <string name="game_settings">Game Settings</string>
    <string name="customization_settings">Customization Settings</string>
    <string name="theme">Theme</string>

    <string name="winner">Winner</string>
    <string name="loser">Loser</string>
    <string name="x_piece">X</string>
    <string name="o_piece">O</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="computer">Computer</string>
    <string name="play_again">Play Again?</string>
    <string name="go_back">Go Back</string>
    <string name="tic">Tic-</string>
    <string name="tac">Tac-</string>
    <string name="toe">Toe</string>
    <string name="score">%1$d-%2$d-%3$d</string>

    <string name="player_one_wins">Player 1 Won!</string>
    <string name="player_two_wins">Player 2 Won!</string>
    <string name="player_wins">You Won!</string>
    <string name="computer_wins">You Lost...</string>
    <string name="game_draws">It\'s a Draw.</string>
    <string name="draw">Draw</string>
    <string name="player_one_turn">Player 1\'s turn.</string>
    <string name="player_two_turn">Player 2\'s turn.</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_winner">Sort by Winner</string>
    <string name="show_wins">Show wins</string>
    <string name="show_losses">Show losses</string>
    <string name="show_draws">Show draws</string>
    <string name="title_activity_navigation2">NavigationActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>