<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/winner_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winning_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_text_view"
        tools:text="@string/player_1"
        android:paddingEnd="8dp"/>

    <TextView
        android:id="@+id/winning_player_piece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/winning_player"
        app:layout_constraintTop_toBottomOf="@+id/winner_text_view"
        tools:text="@string/o_piece" />

    <TextView
        android:id="@+id/loser_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/losing_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="@+id/loser_text_view"
        app:layout_constraintTop_toBottomOf="@+id/loser_text_view"
        tools:text="@string/player_2" />

    <TextView
        android:id="@+id/losing_player_piece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/losing_player"
        app:layout_constraintTop_toBottomOf="@+id/loser_text_view"
        tools:text="@string/x_piece" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/losing_player"
        tools:text="@tools:sample/date/hhmmss" />

</androidx.constraintlayout.widget.ConstraintLayout>